syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "https://github.com/e2b-dev/infra/template-manager";


// Data required for creating a new template.
message TemplateCreateRequest {
  string templateID = 1;
  string buildID = 2;
  int32 memoryMB = 3;
  int32 cpuCount = 4;
  int32 diskSizeMB = 5;
  string kernelVersion = 6;
  string firecrackerVersion = 7;
  string startCommand = 8;
  bool hugePages = 9;
}

// Data required for deleting a template.
message TemplateDeleteRequest {
  string templateID = 1;
}


// Interface exported by the server.
service TemplateService {
  // TemplateCreate is a gRPC service that creates a new template
  rpc TemplateCreate (TemplateCreateRequest) returns (google.protobuf.Empty);
  // TemplateDelete is a gRPC service that deletes files associated with a template
  rpc TemplateDelete (TemplateDeleteRequest) returns (google.protobuf.Empty);
}
